--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test": "web-test-runner --coverage",
     "test:watch": "web-test-runner --watch",
     "storybook": "npm run analyze -- --exclude dist && web-dev-server -c .storybook/server.mjs",
+    "build": "rimraf dist && rollup -c rollup.config.js && npm run analyze -- --exclude dist",
     "storybook:build": "npm run analyze -- --exclude dist && build-storybook"
   },
   "dependencies": {
@@ -21,17 +22,29 @@
     "lit": "^2.0.2"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.15.6",
     "@custom-elements-manifest/analyzer": "^0.4.17",
+    "@open-wc/building-rollup": "^1.10.0",
     "@open-wc/eslint-config": "^4.3.0",
     "@open-wc/testing": "next",
-    "@web/dev-server": "^0.1.28",
+    "@rollup/plugin-babel": "^5.3.0",
+    "@rollup/plugin-node-resolve": "^13.0.5",
+    "@web/dev-server": "^0.1.24",
     "@web/dev-server-storybook": "next",
-    "@web/test-runner": "^0.13.22",
+    "@web/rollup-plugin-html": "^1.10.1",
+    "@web/rollup-plugin-import-meta-assets": "^1.0.7",
+    "@web/test-runner": "^0.13.18",
+    "babel-plugin-template-html-minifier": "^4.1.0",
+    "deepmerge": "^4.2.2",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "husky": "^4.3.8",
     "lint-staged": "^10.5.4",
-    "prettier": "^2.4.1"
+    "prettier": "^2.4.1",
+    "rimraf": "^3.0.2",
+    "rollup": "^2.58.0",
+    "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-workbox": "^6.2.0"
   },
   "customElements": "custom-elements.json",
   "eslintConfig": {
