--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "test:watch": "web-test-runner --watch",
     "storybook": "npm run analyze -- --exclude dist && web-dev-server -c .storybook/server.mjs",
     "build": "rimraf dist && rollup -c rollup.config.js && npm run analyze -- --exclude dist",
+    "start:build": "web-dev-server --root-dir dist --app-index index.html --open",
     "storybook:build": "npm run analyze -- --exclude dist && build-storybook"
   },
   "dependencies": {
